tests/compile_fail/invalid_time_list_empty_literal.rs
use surgeist_style::TimeList;

fn main() {
    let _list = TimeList { values: Vec::new() };
}
